добавил и окончательно сделал session/test апи
